[package]
name = "aor2018"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
itertools = "0.10"
#ndarray = "0.15"
#nom = "7"
#pathfinding = "3.0.5"
regex = "1"
#tracing = "0.1"
#tracing-subscriber = "0.2"
sscanf = "0.4"

[profile.release]
debug = 1

[lib]
name = "lib"
path = "src/lib/lib.rs"


[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
